buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
    }
}

apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'

group = 'com.gralll.aws'
version = '1.0-SNAPSHOT'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'com.gralll.sam.Application'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

task customFatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'com.gralll.sam.Application'
    }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

test {
    jvmArgs '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED', '--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED'
}

dependencies {
    // AWS
    compile group: 'com.amazonaws.serverless', name: 'aws-serverless-java-container-core', version: '1.4'
    compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.0'
    compile group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.759'
    compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j2', version: '1.1.0'

    // Utils
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'


    // Test
}